--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-django==3.1.1
+asgiref==3.2.10
+boto3==1.14.60
+botocore==1.17.60
+Django==3.1.1
+django-s3-storage==0.13.3
 djangorestframework==3.11.1
+docutils==0.15.2
+jmespath==0.10.0
 Pillow==7.2.0
+python-dateutil==2.8.1
+pytz==2020.1
+s3transfer==0.3.3
+six==1.15.0
+sqlparse==0.3.1
+urllib3==1.25.10
